# Kapotah

./: CMakeLists.txt  Chataroma.pro  INSTALL  Kapotah.pro  LICENSE  Mainpage.dox  README  README.txt  TODO  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  announcer.cpp  announcer.h  broadcastmanager.cpp  broadcastmanager.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  debug.cpp  debug.h  dialog.cpp  dialog.h  dialog.ui  dirreceiverthread.cpp  dirreceiverthread.h  dirrecieverthread.cpp  dirrecieverthread.h  dirsenderthread.cpp  dirsenderthread.h  filereceiverthread.cpp  filereceiverthread.h  filerecieverthread.cpp  filerecieverthread.h  filesearcher.cpp  filesearcher.h  filesearcherthread.cpp  filesearcherthread.h  filesender.cpp  filesender.h  (+63 more)
docs/: FrontPage.odt  Introduction.odt  Testing.odt  certificate1.odt  chapter1.odt  chapter8&9.odt  design.odt  implementation.odt  literature-survey.odt  presentation.odp  requirements-specifications.odt  screenshots.odt
ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  chatdialog.cpp  chatdialog.h  chatdialog.ui  multicastdialog.cpp  multicastdialog.h  multicastdialog.ui  peerdialog.cpp  peerdialog.cpp~  peerdialog.h  peerdialog.h~  peerdialog.ui  searchdialog.cpp  searchdialog.h  searchdialog.ui  transferdialog.cpp  transferdialog.h  transferdialog.ui  transferwidget.cpp  transferwidget.h
ui/notifications/: notificationitemwidget.cpp  notificationitemwidget.h  notificationitemwidget.ui  notifications.cpp  notifications.h  notificationsdialog.cpp  notificationsdialog.h  notificationsdialog.ui
xml/: abstractxmlparser.cpp  abstractxmlparser.h  announcexmlparser.cpp  announcexmlparser.h  messagexmlparser.cpp  messagexmlparser.h  peerstatusxmlparser.cpp  peerstatusxmlparser.h  searchxmlparser.cpp  searchxmlparser.h  transferstatusxmlparser.cpp  transferstatusxmlparser.h  transferxmlparser.cpp  transferxmlparser.h  xmlparser.cpp
